Closed
Bug 243345
Opened 21 years ago
Closed 21 years ago
[FIX]bugzilla request dropdowns show strange character
Categories
(Core :: Layout: Form Controls, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla1.8alpha1
People
(Reporter: Biesinger, Assigned: bzbarsky)
Details
(Keywords: regression)
Attachments
(3 files, 1 obsolete file)
|
1.49 KB,
image/png
|
Details | |
|
1010 bytes,
patch
|
jst
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
|
1.36 KB,
patch
|
jst
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
nightly 2004051006, gtk1 (no xft), linux/x86
The request dropdowns on bugzilla, when no flag is selected, show a strange
character.
looks like a rectangle, with a dotted outline. will attach a screenshot.
| Reporter | ||
Comment 1•21 years ago
|
||
| Assignee | ||
Comment 2•21 years ago
|
||
Regressed between 2004-05-07-08 and 2004-05-08-08. Checkins:
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2004-05-07+08%3A00%3A00&maxdate=2004-05-08+08%3A00%3A00&cvsroot=%2Fcvsroot
Possible culprits:
Bug 237760, caillon's checkin for style stuff, bug 242734.
Note that this is not a "strange character" -- it's just the focus rect being
mis-sized.
| Reporter | ||
Comment 3•21 years ago
|
||
(In reply to comment #2)
> Regressed between 2004-05-07-08 and 2004-05-08-08. Checkins:
whoa bz, you are too fast for me... I was still downloading a build to hunt for
the regression date
> Note that this is not a "strange character" -- it's just the focus rect being
> mis-sized.
oh. heh. cool. :)
going to mark major, as this is quite visible...
Severity: normal → major
| Assignee | ||
Comment 4•21 years ago
|
||
I was wrong. It's a strange character... ;)
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
| Assignee | ||
Comment 5•21 years ago
|
||
Attachment #148240 -
Attachment is obsolete: true
| Assignee | ||
Comment 6•21 years ago
|
||
Comment on attachment 148241 [details] [diff] [review]
Patch for real
jst, this is all your fault, man! The null terminator is _not_ part of the
string!
Attachment #148241 -
Flags: superreview?(jst)
Attachment #148241 -
Flags: review?(jst)
| Assignee | ||
Updated•21 years ago
|
Priority: -- → P2
Summary: bugzilla request dropdowns show strange character → [FIX]bugzilla request dropdowns show strange character
Target Milestone: --- → mozilla1.8alpha
| Reporter | ||
Comment 7•21 years ago
|
||
(i.e. this was caused by bug 242734)
The implementation of SetText (in nsGenericDOMDataNode.cpp) assumes its argument
is null-terminated.
| Assignee | ||
Comment 9•21 years ago
|
||
Hmm.. so it does, when it does the nsDependentString thing. We should probably
fix that, since the call signature makes it look that no such assumptions, and
neither does the API (or document the assumption and change this patch accordingly).
Comment 10•21 years ago
|
||
Sorry for not replying here before, I had some major email problems all day
yesterday and missed this discussion.
How about this, in addition to bz's patch?
Comment 11•21 years ago
|
||
Comment on attachment 148241 [details] [diff] [review]
Patch for real
Duh :-) r+sr=jst
Attachment #148241 -
Flags: superreview?(jst)
Attachment #148241 -
Flags: superreview+
Attachment #148241 -
Flags: review?(jst)
Attachment #148241 -
Flags: review+
Updated•21 years ago
|
Attachment #148346 -
Flags: superreview?(bzbarsky)
Attachment #148346 -
Flags: review?(bzbarsky)
| Assignee | ||
Comment 12•21 years ago
|
||
Comment on attachment 148346 [details] [diff] [review]
Don't assume aBuffer is null-terminated.
What about the char* version of SetText? It has the same issue, no?
Comment 13•21 years ago
|
||
Yeah, duh, fixed locally. Checking in (r+sr=bz over IRC).
Comment 14•21 years ago
|
||
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Attachment #148346 -
Flags: superreview?(bzbarsky)
Attachment #148346 -
Flags: superreview+
Attachment #148346 -
Flags: review?(bzbarsky)
Attachment #148346 -
Flags: review+
You need to log in
before you can comment on or make changes to this bug.
Description
•