Fixing regression bug 243345. Make nsITextContent::SetText() work with non-null terminated strings, and fix silly mistake in nsComboboxControlFrame::GetIndexOfDisplayArea(). Patch partly by bzbarsky@mit.edu, and partly by myself. r+sr=bzbarsky@mit.edu and jst@mozilla.jstenback.com